tests/miniJava/neg/004830_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( ) String return 0 ; } }
